syntax = "proto3";

package customer.v1;

import "google/api/annotations.proto";

option go_package = "customer/api/customer/v1;v1";
option java_multiple_files = true;
option java_package = "customer.v1";

service Customer {
	rpc GetVerifyCode (GetVerifyCodeRequest) returns (GetVerifyCodeReply)
	{
		option (google.api.http) = {
			post: "/api/v1/customer/get-verify-code",
			body: "*"
		};
	};
}

message GetVerifyCodeRequest {
	string phone_number = 1;
}
message GetVerifyCodeReply {
	string verify_code = 1;
	int32 code = 2;
	string message = 3;
	int64 expire_time = 4;
}
